# paket

./: .clang-format  .clang-tidy  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  changelog.md  code-of-conduct.md  contributing.md  license  maintainers.md  readme.md
.github/ISSUE_TEMPLATE/: bug.md  feature_request.md  generated.md  reporter.md
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  feature.md
.github/workflows/: hello.world.yml
base/include/basepaket/: path_info.hpp
base/lib/: CMakeLists.txt
base/lib/basepaket/: path_info.cpp
bench/lib/: CMakeLists.txt
cmake/configure/: doxyfile.in  paketConfig.cmake.in
cmake/include/: coverage.cmake  dependency.cmake  external.cmake  install.cmake  option.cmake  process.option.cmake  system.cmake
cmake/module/: scandiumConfig.cmake  vanadiumConfig.cmake
cmake/module/scandium/: coverage.cmake  filesystem.cmake  (+1 more)
dev/etc/: meta.sh
doc/doxygen/: index.md
src/: CMakeLists.txt
src/cmake/include/: dependency.cmake  external.cmake  install.cmake
src/codegen/cmake/paket/meta/: project.hpp.cmake.codegen  project_info.hpp.cmake.codegen  project_info.hpp.cmake.in  version.hpp.cmake.codegen
src/include/paket/: backtrace.hpp  compiler.hpp  compiler_fwd.hpp  lockfile.hpp  os.hpp  os_fwd.hpp  paket.hpp  source_location.hpp
src/include/paket/hash/: algorithm.hpp
src/include/paket/macro/: always_inline.hpp  never_inline.hpp
src/include/paket/meta/: build.hpp
src/include/paket/meta/detail/: compiler.hpp
src/lib/: CMakeLists.txt
src/lib/paket/: CMakeLists.txt  backtrace.cpp  lockfile.cpp  paket.cpp  source_location.cpp
test/: CMakeLists.txt
test/lib/: CMakeLists.txt
(+20 files in other folders)
